// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiHeaderAlert is rendered 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="wuiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiFlexGroup wuiFlexGroup--gutterLarge wuiFlexGroup--justifyContentSpaceBetween wuiFlexGroup--directionRow wuiFlexGroup--responsive"
  >
    <div
      class="wuiFlexItem"
    >
      <div
        class="wuiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="wuiHeaderAlert__title"
    id="generated-id-title"
  >
    title
  </h3>
  <div
    class="wuiHeaderAlert__text"
  />
</article>
`;

exports[`WuiHeaderAlert renders action 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="wuiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiFlexGroup wuiFlexGroup--gutterLarge wuiFlexGroup--justifyContentSpaceBetween wuiFlexGroup--directionRow wuiFlexGroup--responsive"
  >
    <div
      class="wuiFlexItem"
    >
      <div
        class="wuiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="wuiHeaderAlert__title"
    id="generated-id-title"
  >
    title
  </h3>
  <div
    class="wuiHeaderAlert__text"
  />
  <div
    class="wuiHeaderAlert__action wuiLink"
  >
    <button>
      Quietly take to the ship
    </button>
  </div>
</article>
`;

exports[`WuiHeaderAlert renders date as an element 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="wuiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiFlexGroup wuiFlexGroup--gutterLarge wuiFlexGroup--justifyContentSpaceBetween wuiFlexGroup--directionRow wuiFlexGroup--responsive"
  >
    <div
      class="wuiFlexItem"
    >
      <div
        class="wuiHeaderAlert__date"
      >
        <h2>
          October 18, 1851
        </h2>
      </div>
    </div>
  </div>
  <h3
    class="wuiHeaderAlert__title"
    id="generated-id-title"
  >
    shazm
  </h3>
  <div
    class="wuiHeaderAlert__text"
  />
</article>
`;

exports[`WuiHeaderAlert renders title as an element 1`] = `
<article
  aria-label="aria-label"
  aria-labelledby="generated-id-title"
  class="wuiHeaderAlert testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="wuiFlexGroup wuiFlexGroup--gutterLarge wuiFlexGroup--justifyContentSpaceBetween wuiFlexGroup--directionRow wuiFlexGroup--responsive"
  >
    <div
      class="wuiFlexItem"
    >
      <div
        class="wuiHeaderAlert__date"
      >
        date
      </div>
    </div>
  </div>
  <h3
    class="wuiHeaderAlert__title"
    id="generated-id-title"
  />
  <h2>
    Circumambulate the city
  </h2>
  <div
    class="wuiHeaderAlert__text"
  />
</article>
`;
